k8s-CICD/statuspage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dr-statuspage
  labels:
    owner: dr_admin
    app: dr_statuspage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dr_statuspage_app
  template:
    metadata:
      labels:
        app: dr_statuspage_app
        app.kubernetes.io/name: dr-statuspage
    spec:
      containers:
      - name: dr-statuspage-app
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/dr_repo_statuspage:latest
        ports:
        - containerPort: 8000
