k8s-CICD/statuspage-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dr-statuspage-ingress
  namespace: default
  annotations:
    # deprecated, אבל נשאיר עבור backward compatibility עם ALB
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:992382545251:certificate/062cf684-38da-4543-93ad-ef197c070b25"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: app.drstatuspage.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dr-statuspage-service
                port:
                  number: 8000
